--- a/CHANGELOG
+++ b/CHANGELOG
@@ -28,6 +28,8 @@ Changes in Winter
 10. Added some stuff to .bashrc
 11. Changed /scripts/vol file to play a different sound.
     - It now plays dialog-warning.wav (original is dialog-warning.oga).
+12. Added /scripts/gifenc.
+    - Converts screen recording to gif.
 
 --------------    
 
