Change to Dark theme
See CHANGELOG for more information

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,31 @@
-i3conf.v# is the tag of the release.
+For older releases, go to:
+https://github.com/clyde80/i3-configuration/releases
 
 Logging started on November 08, 2016
 
-Changes in Winter
+Changes in Dark theme
+    - Date: January 04, 2017
+
+1. Change main colors to beige, green, and red.
+2. Change colors in CMUS.
+3. Add new terminal theme (dark.theme).
+    - Compressed winter.theme.
+4. Changed yabar look to comply with main colors.
+5. Firefox:
+    - Previous current.css file is now compressed and renamed to winter.css.
+    - Changed colors in current.css to comply with main colors.
+    - Added Stylish CSS for Turbo Download Manager.
+6. Changed lightdm background photo.
+7. Updated ROFI to comply with main colors.
+8. Added support for MPD in scripts/getmusicstatus.
+    - Needs MPC to work.
+    - Changed icons used when displaying music status in yabar.
+9. Changed colors in top.
+10. This configuration does not use Compton.
+
+--------------    
+
+Changes in Winter theme
     - Date: December 12, 2016
 
 1. Change main colors to black, white, and green.
@@ -10,22 +33,22 @@ Changes in Winter
 3. Add new terminal theme (winter.theme).
     - Compressed other themes to clean up directory. Older configurations are now
       located in /terminal_themes/older_themes.zip.
-4. Quit using i3status and started using yabar (/yabar)
+4. Quit using i3status and started using yabar (/yabar).
     - Added workspace monitoring script in yabar.
     - Added other scripts that yabar may use in /scripts.
-    - Added yabar config file (/yabar/yabar.conf)
-5. Changed look and style of firefox homepage (stylesheet.css)
+    - Added yabar config file (/yabar/yabar.conf).
+5. Changed look and style of firefox homepage (stylesheet.css).
     - All links are now buttons.
     - Changed colors to green, white, and black.
 6. Added new stylish CSS file (winter.css)
     - Compressed other CSS files to clean up directory. Older configurations are now
-      in zip archive located at /firefox-config/stylish-themes/older_themes.zip
-7. Added a new vim colorscheme (vim/winter.vim)
+      in zip archive located at /firefox-config/stylish-themes/older_themes.zip.
+7. Added a new vim colorscheme (vim/winter.vim).
     - Compressed other vim colorschemes to clean up directory. Older configurations are
-      in a zip archive located at /vim/older_colorschemes.zip
+      in a zip archive located at /vim/older_colorschemes.zip.
 8. Customized colors in top.
 9. Removed install.sh script because I don't like it.
-10. Added some stuff to .bashrc
+10. Added some stuff to .bashrc.
 11. Changed /scripts/vol file to play a different sound.
     - It now plays dialog-warning.wav (original is dialog-warning.oga).
 12. Added /scripts/gifenc.
@@ -36,44 +59,44 @@ Changes in Winter
 Changes in USA theme
     - Date: November 23, 2016
 
-1. Changed main colors to red white and blue.
+1. Changed main colors to red, white and blue.
 2. Changed colors in CMUS.
 3. Added new terminal theme (USA.theme)
 4. Changed colors in i3status bar.
 5. Changed look and style of Firefox homepage.
-    - Added seperate file for stying (stylesheet.css)
+    - Added separate file for styling homepage (stylesheet.css).
         - This file may need to be modified based on device because it is hard coded to
           my device.
-6. Added new stylish CSS file (USA.css)
-    - Fixed a few spots on the sheet (colors where colors aren't supposed to be)
-7. Added new vim colorscheme (USA.vim)
+6. Added new stylish CSS file (USA.css).
+    - Fixed a few spots on the sheet (colors where colors aren't supposed to be).
+7. Added new vim colorscheme (USA.vim).
 8. Customized colors in top (process manager).
 9. Added custom backlight script that shows a notification displaying the screen brightness.
 
 --------------    
 
-Changes in Red and Yellow theme (https://github.com/clyde80/i3-configuration/releases)
+Changes in Red and Yellow theme
     - Date: November 09, 2016
 
 1. Changed main colors to yellow and red.
-2. Changed some colors in CMUS
-3. Added new terminal theme (red-and-yellow.theme)
+2. Changed some colors in CMUS.
+3. Added new terminal theme (red-and-yellow.theme).
 4. Changed colors in i3status bar.
 5. Changed main colors of Firefox homepage.
 6. Added red-and-yellow.css (new stylish css file).
 
 --------------    
 
-Changes in Red, Orange and Black theme (https://github.com/clyde80/i3-configuration/releases)
+Changes in Red, Orange and Black theme
     - Date: November 08, 2016
 
 1. Changed main colors to orange and red.
 2. Changed background image to mountains.
 3. Added new terminal theme (Mountains.theme).
 4. Added icons with Font-Awesome to i3status bar for wifi, disk space, volume, and battery.
-5. Changed main colors to white, light grey, and dark grey.
+5. Changed main colors to white, light gray, and dark gray.
 6. Added animations to Firefox home page search box and links.
 7. Changed colors on Firefox home page to red and orange.
-8. Added orange-red-black.css (newest stylish css file).
+8. Added orange-red-black.css (newest Stylish CSS file).
     
 --------------
