--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,13 @@ https://github.com/clyde80/i3-configuration/releases
 Logging started on November 08, 2016
 
 Changes in Minimal Red theme
-    - February 23, 2017
+    - February 24, 2017
+
+1. Updated gifenc script
+    - Allow user to specify the width of the resulting GIF.
+    - Allow user to specify the FPS of the resulting GIF.
+
+----- Date: February 23, 2017 -----
 
 1. Change script headers to be consistent.
 2. Change script usage messages to be consistent.
